fixed wrapping for tiles + added bg

--- a/src/index.css
+++ b/src/index.css
@@ -5,10 +5,15 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-image: url("./assets/bg.png");
 }
 
 html * {
   box-sizing: border-box;
+}
+
+#root {
+  background: rgba(255, 255, 255, 0.7);
 }
 
 code {
